--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@testing-library/jest-native": "^3.1.0",
     "@types/jest": "^25.2.1",
-    "axios": "^0.19.2",
+    "axios": "^0.20.0",
     "axios-mock-adapter": "^1.18.1",
     "react": "16.11.0",
-    "react-native": "0.62.1"
+    "react-native": "0.62.1",
+    "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
